# starting-rust

fibonacci/: Cargo.toml
fibonacci/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main.rs
roomi/: .gitignore  Cargo.toml
roomi/src/: main.rs
